--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -83,6 +83,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>jahia-administration</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
