--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.6</version>
+            <version>7.2.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
