--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -107,8 +107,8 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>dx-commons-webpack</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <artifactId>app-shell</artifactId>
+            <version>1.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
