--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -155,7 +155,7 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>dx-commons-webpack</artifactId>
+            <artifactId>app-shell</artifactId>
             <version>1.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
