--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -333,7 +333,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.2.0</version>
+            <version>7.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
