--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -290,7 +290,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
@@ -309,7 +309,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.3.0</version>
+            <version>7.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
