--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -107,6 +107,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>jahia-dashboard-docs</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-category-manager</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
