--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>channels</artifactId>
-            <version>7.2.1</version>
+            <version>7.2.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
