--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -60,121 +60,121 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>article</artifactId>
-            <version>2.0.3</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bookmarks</artifactId>
-            <version>2.1.1</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.6</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>contact</artifactId>
-            <version>2.0.3</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-components</artifactId>
-            <version>1.0.4</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-core</artifactId>
-            <version>1.0.4</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
-            <version>2.0.3</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
-            <version>2.0.2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>font-awesome</artifactId>
-            <version>4.6.3</version>
+            <version>6.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>googleAnalytics</artifactId>
-            <version>2.0.4</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>location</artifactId>
-            <version>2.0.5</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
-            <version>2.0.4</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>person</artifactId>
-            <version>2.0.2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>press</artifactId>
-            <version>2.0.2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>2.0.5</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rss</artifactId>
-            <version>2.0.6</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>socialsharing</artifactId>
-            <version>2.0.2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>topstories</artifactId>
-            <version>2.0.2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>3.6.0</version>
+            <version>4.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-core</artifactId>
-            <version>3.6.0</version>
+            <version>4.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <!-- end of Jahia Forge Modules -->
@@ -191,7 +191,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>3.0.0-SNAPSHOTT</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>digitall</artifactId>
-            <version>1.1.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
