--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -191,7 +191,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>3.0.0-SNAPSHOTT</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
