--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -49,7 +49,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>8.0.1.0-SNAPSHOT</version>
+        <version>8.0.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
