--- a/jahia-packages-parent/pom.xml
+++ b/jahia-packages-parent/pom.xml
@@ -49,7 +49,7 @@
   <parent>
       <groupId>org.jahia.server</groupId>
       <artifactId>jahia-pack-root</artifactId>
-    <version>8.0.1.0-SNAPSHOT</version>
+    <version>8.0.0.0</version>
   </parent>
   <groupId>org.jahia.packages</groupId>
   <artifactId>jahia-packages-parent</artifactId>
