--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -300,7 +300,7 @@
                                     <target>
                                         <retry retryCount="3" retryDelay="30000">
                                             <exec executable="jarsigner" failOnError="true">
-                                                <arg line="-storetype PKCS12 -keystore ${jahia.sign.keystore} -storepass ${jahia.sign.storepass} -tsa http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.jar jahia" />
+                                                <arg line="-storetype PKCS12 -keystore ${jahia.sign.keystore} -storepass ${jahia.sign.storepass} -tsa http://timestamp.comodoca.com/rfc3161 ${project.build.directory}/${installer.filename}.jar jahia" />
                                             </exec>
                                         </retry>
                                     </target>
@@ -356,7 +356,7 @@
                                         <chmod file="${project.build.directory}/sign4j/${sign4j.executable}" perm="ugo+rx" />
                                         <retry retryCount="3" retryDelay="30000">
                                             <exec executable="${project.build.directory}/sign4j/${sign4j.executable}" failOnError="true">
-                                                <arg line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe" />
+                                                <arg line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://timestamp.comodoca.com/rfc3161 ${project.build.directory}/${installer.filename}.exe" />
                                             </exec>
                                         </retry>
                                     </target>
