--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
