--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -204,7 +204,7 @@
             <!-- JAX-RS OSGi Extender, depends on Jersey and its dependencies, put in bundles -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jaxrs-osgi-extender</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
