--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,9 +119,9 @@ jobs:
       - run:
           name: Trigger the build of jahia-ee
           command: curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline'
-            --header 'circle-token:$CIRCLECI_PIPELINE_LAUNCH_TOKEN'
+            --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"''
             --header 'content-type:application/json'
-            --data '{ "branch":"$CIRCLE_BRANCH" }'
+            --data '{ "branch":"'"$CIRCLE_BRANCH"'" }'
 
 # Pipeline parameter must be declared
 parameters:
