--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -202,7 +202,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
