--- a/docker-jahia/Dockerfile
+++ b/docker-jahia/Dockerfile
@@ -8,9 +8,6 @@ ARG C_GROUP="tomcat"
 
 LABEL maintainer="Jahia Product team <product@jahia.com>"
 
-RUN mkdir -p /data/digital-factory-data/patches/provisioning
-COPY target/dependency/jahia-core-modules-${PROJECT_VERSION}-provisioning.yaml /data/digital-factory-data/patches/provisioning/1.1-jahia-core-modules.yaml
-COPY --chown=${C_USER}:${C_GROUP} target/repository /data/m2/repository/
-
-#RUN downloadProvisioning.sh /data/digital-factory-data/patches/provisioning/*
-
+RUN mkdir -p /usr/local/tomcat/digital-factory-data/patches/provisioning
+COPY target/dependency/jahia-core-modules-${PROJECT_VERSION}-provisioning.yaml /usr/local/tomcat/digital-factory-data/patches/provisioning/1.1-jahia-core-modules.yaml
+COPY --chown=${C_USER}:${C_GROUP} target/repository /home/${C_USER}/.m2
