--- a/docker-jahia/Dockerfile
+++ b/docker-jahia/Dockerfile
@@ -10,4 +10,5 @@ LABEL maintainer="Jahia Product team <product@jahia.com>"
 
 RUN mkdir -p /usr/local/tomcat/digital-factory-data/patches/provisioning
 COPY target/dependency/jahia-core-modules-${PROJECT_VERSION}-provisioning.yaml /usr/local/tomcat/digital-factory-data/patches/provisioning/1.1-jahia-core-modules.yaml
-COPY --chown=${C_USER}:${C_GROUP} target/repository /home/${C_USER}/.m2
+RUN mkdir -p /home/${C_USER}/.m2/repository
+COPY --chown=${C_USER}:${C_GROUP} target/repository /home/${C_USER}/.m2/repository
