--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -103,13 +103,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-components</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-core</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
