--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -181,7 +181,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-developer-tools</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -283,7 +283,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.6.0</version>
+            <version>9.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
