--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.19.1-jahia8-3</version>
+            <version>4.19.1-jahia8-4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
