--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -302,7 +302,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>4.1.0</version>
+            <version>4.2.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
