--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>4.5.0</version>
+            <version>4.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
