--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-user-entries</artifactId>
-            <version>1.4.0</version>
+            <version>1.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -121,7 +121,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.7.0</version>
+            <version>1.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -133,13 +133,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-category-manager</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-repository-explorer</artifactId>
-            <version>1.4.0</version>
+            <version>1.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
