--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -151,7 +151,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>3.5.0</version>
+            <version>3.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
