--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -44,22 +44,22 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
         <version>8.2.0.0-SNAPSHOT</version>
-        <relativePath />
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
-
+    
     <properties>
         <package.sources.skip>true</package.sources.skip>
     </properties>
-
+    
     <repositories>
         <repository>
             <id>jahia-public</id>
@@ -74,7 +74,7 @@
             </snapshots>
         </repository>
     </repositories>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>2.11.0</version>
+            <version>2.12.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
