--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -157,7 +157,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>8.6.0</version>
+            <version>8.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
